--- a/hit-on.cabal
+++ b/hit-on.cabal
@@ -22,10 +22,18 @@ source-repository head
 
 library
   hs-source-dirs:      src
-  exposed-modules:     HitOn
+  exposed-modules:     Hit
+                         Hit.Cli
+                         Hit.ColorTerminal
+
+  autogen-modules:     Paths_hit_on
+  other-modules:       Paths_hit_on
                        Prelude
 
   build-depends:       base-noprelude ^>= 4.12.0.0
+                     , ansi-terminal ^>= 0.9
+                     , gitrev ^>= 1.3
+                     , optparse-applicative ^>= 0.14
                      , relude
 
   ghc-options:         -Wall
@@ -53,13 +61,12 @@ library
                        TypeApplications
                        ViewPatterns
 
-executable hit-on
+executable hit
   hs-source-dirs:      app
   main-is:             Main.hs
 
-  build-depends:       base-noprelude ^>= 4.12.0.0
+  build-depends:       base ^>= 4.12.0.0
                      , hit-on
-                     , relude
 
   ghc-options:         -Wall
                        -threaded
