[#1] Impl basic CLI (#13)
* [#1] Impl basic CLI

* Fix CI

--- a/hit-on.cabal
+++ b/hit-on.cabal
@@ -22,11 +22,19 @@ source-repository head
 
 library
   hs-source-dirs:      src
-  exposed-modules:     HitOn
+  exposed-modules:     Hit
+                         Hit.Cli
+                         Hit.ColorTerminal
+
+  autogen-modules:     Paths_hit_on
+  other-modules:       Paths_hit_on
                        Prelude
 
   build-depends:       base-noprelude ^>= 4.12.0.0
-                     , relude
+                     , ansi-terminal >= 0.8
+                     , gitrev ^>= 1.3
+                     , optparse-applicative ^>= 0.14
+                     , relude ^>= 0.4
 
   ghc-options:         -Wall
                        -Wincomplete-uni-patterns
@@ -53,13 +61,12 @@ library
                        TypeApplications
                        ViewPatterns
 
-executable hit-on
+executable hit
   hs-source-dirs:      app
   main-is:             Main.hs
 
-  build-depends:       base-noprelude ^>= 4.12.0.0
+  build-depends:       base ^>= 4.12.0.0
                      , hit-on
-                     , relude
 
   ghc-options:         -Wall
                        -threaded
