[#2] Implement 'hop' command

--- a/hit-on.cabal
+++ b/hit-on.cabal
@@ -25,6 +25,7 @@ library
   exposed-modules:     Hit
                          Hit.Cli
                          Hit.ColorTerminal
+                         Hit.Git
                          Hit.Shell
 
   autogen-modules:     Paths_hit_on
