--- a/hit-on.cabal
+++ b/hit-on.cabal
@@ -85,16 +85,17 @@ executable hit
 
 
 test-suite hit-on-test
+  import:              common-options
   type:                exitcode-stdio-1.0
   hs-source-dirs:      test
   main-is:             Main.hs
+  
   build-depends:       base
                      , text
                      , hspec
                      , github
                      , hit-on
-  other-modules:       
-  ghc-options:        -Wall
-                      -threaded
+
+  ghc-options:        -threaded
                       -rtsopts
                       -with-rtsopts=-N
