[#35] Implement Unit Tests for 'parseOwnerRepo' function (#74)
* [#35] Implement Unit Tests for 'parseOwnerRepo' function

* Add common-options import to test-suite in cabal file, remove extra opts

* Formatting adjustments and addition of non-happy test case scenarios

- Remove LANGUAGE pragmas
- Format and arrange imports, add explicit imports
- Minor improvements

--- a/hit-on.cabal
+++ b/hit-on.cabal
@@ -82,3 +82,20 @@ executable hit
                        -threaded
                        -rtsopts
                        -with-rtsopts=-N
+
+
+test-suite hit-on-test
+  import:              common-options
+  type:                exitcode-stdio-1.0
+  hs-source-dirs:      test
+  main-is:             Main.hs
+  
+  build-depends:       base
+                     , text
+                     , hspec
+                     , github
+                     , hit-on
+
+  ghc-options:        -threaded
+                      -rtsopts
+                      -with-rtsopts=-N
