--- a/hit-on.cabal
+++ b/hit-on.cabal
@@ -65,6 +65,7 @@ library
                      , github ^>= 0.20
                      , gitrev ^>= 1.3
                      , optparse-applicative ^>= 0.14
+                     , process ^>= 1.6
                      , relude ^>= 0.5
                      , shellmet >= 0.0.0
                      , text
