[#82] Add force flag to hit fix
Resolves #82

--- a/hit-on.cabal
+++ b/hit-on.cabal
@@ -52,6 +52,7 @@ library
   exposed-modules:     Hit
                          Hit.Cli
                          Hit.ColorTerminal
+                         Hit.Core
                          Hit.Git
                            Hit.Git.Status
                          Hit.Issue
