--- a/hit-on.cabal
+++ b/hit-on.cabal
@@ -63,6 +63,7 @@ library
 
   build-depends:       base-noprelude ^>= 4.12.0.0
                      , ansi-terminal >= 0.8
+                     , directory ^>= 1.3
                      , github ^>= 0.20
                      , gitrev ^>= 1.3
                      , optparse-applicative ^>= 0.14
