--- a/.travis.yml
+++ b/.travis.yml
@@ -36,7 +36,7 @@ install:
 script:
   - |
     if [ -z "$STACK_YAML" ]; then
-       echo 'No tests'
+       cabal new-test --enable-tests
     else
       stack test --system-ghc --no-terminal
     fi
