--- a/.travis.yml
+++ b/.travis.yml
@@ -20,6 +20,9 @@ matrix:
     env: STACK_YAML="$TRAVIS_BUILD_DIR/stack.yaml" DEPLOY=yes
 
 install:
+  # HLint check
+  - curl https://raw.githubusercontent.com/kowainik/relude/55968311244690f5cc8b4484a37a63d988ea2ec4/.hlint.yaml -o .hlint-relude.yaml
+  - curl -sSL https://raw.github.com/ndmitchell/neil/master/misc/travis.sh | sh -s -- hlint -h .hlint-relude.yaml src/
   - |
     if [ -z "$STACK_YAML" ]; then
       cabal new-update
@@ -31,12 +34,9 @@ install:
     fi
 
 script:
-  # HLint check
-  - curl https://raw.githubusercontent.com/kowainik/relude/55968311244690f5cc8b4484a37a63d988ea2ec4/.hlint.yaml -o .hlint-relude.yaml
-  - curl -sSL https://raw.github.com/ndmitchell/neil/master/misc/travis.sh | sh -s -- hlint -h .hlint-relude.yaml src/
   - |
     if [ -z "$STACK_YAML" ]; then
-       echo 'No tests'
+       cabal new-test --enable-tests
     else
       stack test --system-ghc --no-terminal
     fi
