--- a/.travis.yml
+++ b/.travis.yml
@@ -1,57 +1,36 @@
 sudo: true
-language: haskell
+language: generic
 
 git:
   depth: 5
 
-cabal: "2.4"
-
 cache:
   directories:
-  - "$HOME/.cabal/store"
   - "$HOME/.stack"
   - "$TRAVIS_BUILD_DIR/.stack-work"
 
 matrix:
   include:
-  - ghc: 8.6.5
-
   - os: linux
-    env: GHCVER=8.6.5 STACK_YAML="$TRAVIS_BUILD_DIR/stack.yaml" DEPLOY=yes
-
   - os: osx
-    env: GHCVER=8.6.5 STACK_YAML="$TRAVIS_BUILD_DIR/stack.yaml" DEPLOY=yes
 
 install:
   # HLint check
   - curl https://raw.githubusercontent.com/kowainik/relude/55968311244690f5cc8b4484a37a63d988ea2ec4/.hlint.yaml -o .hlint-relude.yaml
   - curl -sSL https://raw.github.com/ndmitchell/neil/master/misc/travis.sh | sh -s -- hlint -h .hlint-relude.yaml src/
-  - |
-    if [ -z "$STACK_YAML" ]; then
-      cabal new-update
-      cabal new-build --enable-tests --enable-benchmarks
-    else
-      curl -sSL https://get.haskellstack.org/ | sh
-      stack --version
-      stack build --test --no-run-tests --bench --no-run-benchmarks
-    fi
+  # install stack and build project
+  - curl -sSL https://get.haskellstack.org/ | sh
+  - stack --version
+  - stack build --test --no-run-tests --bench --no-run-benchmarks
 
 script:
-  - |
-    if [ -z "$STACK_YAML" ]; then
-       cabal new-test --enable-tests
-    else
-      stack test --no-terminal
-    fi
+  - stack test --no-terminal
 
 after_success:
-  - |
-    if [ "$DEPLOY" = "yes" ]; then
-      echo "hit deploy triggered!"
-      mv "$(stack path --local-install-root)/bin/hit" "hit-${TRAVIS_OS_NAME}"
-      chmod +x "hit-${TRAVIS_OS_NAME}"
-      git tag "$(date +'%Y%m%d%H%M%S')"
-    fi
+  - echo "hit deploy triggered!"
+  - mv "$(stack path --local-install-root)/bin/hit" "hit-${TRAVIS_OS_NAME}"
+  - chmod +x "hit-${TRAVIS_OS_NAME}"
+  - git tag "$(date +'%Y%m%d%H%M%S')"
 
 deploy:
   - skip_cleanup: true
