--- a/hit-on.cabal
+++ b/hit-on.cabal
@@ -53,6 +53,7 @@ library
                          Hit.Cli
                          Hit.ColorTerminal
                          Hit.Core
+                         Hit.Formatting
                          Hit.Git
                            Hit.Git.Status
                          Hit.Issue
