--- a/hit-on.cabal
+++ b/hit-on.cabal
@@ -1,6 +1,6 @@
 cabal-version:       2.4
 name:                hit-on
-version:             0.1.0.0
+version:             0.2.0.0
 synopsis:            Haskell Git Helper Tool
 description:         Haskell Git Helper Tool
 homepage:            https://github.com/kowainik/hit-on
@@ -13,7 +13,7 @@ copyright:           2019 Kowainik
 category:            Git, CLI Tool
 build-type:          Simple
 extra-doc-files:     README.md
-                   , CHANGELOG.md
+                     CHANGELOG.md
 tested-with:         GHC == 8.6.5
 
 source-repository head
@@ -21,6 +21,12 @@ source-repository head
   location:            https://github.com/kowainik/hit-on.git
 
 common common-options
+  build-depends:       base ^>= 4.12.0.0
+                     , relude ^>= 0.6.0.0
+
+  mixins:              base hiding (Prelude)
+                     , relude (Relude as Prelude)
+
   ghc-options:         -Wall
                        -Wincomplete-uni-patterns
                        -Wincomplete-record-updates
@@ -60,17 +66,14 @@ library
 
   autogen-modules:     Paths_hit_on
   other-modules:       Paths_hit_on
-                       Prelude
 
-  build-depends:       base-noprelude ^>= 4.12.0.0
-                     , ansi-terminal >= 0.8
+  build-depends:       ansi-terminal >= 0.8
                      , directory ^>= 1.3
                      , github ^>= 0.23
                      , gitrev ^>= 1.3
-                     , optparse-applicative ^>= 0.14
+                     , optparse-applicative ^>= 0.15
                      , process ^>= 1.6
-                     , relude ^>= 0.6.0.0
-                     , shellmet >= 0.0.1
+                     , shellmet ^>= 0.0.3.0
                      , text
                      , vector ^>= 0.12
 
@@ -78,15 +81,11 @@ executable hit
   import:              common-options
   hs-source-dirs:      app
   main-is:             Main.hs
+  build-depends:       hit-on
 
-  build-depends:       base ^>= 4.12.0.0
-                     , hit-on
-
-  ghc-options:         -Wall
-                       -threaded
+  ghc-options:         -threaded
                        -rtsopts
                        -with-rtsopts=-N
-
 
 test-suite hit-on-test
   import:              common-options
@@ -94,8 +93,7 @@ test-suite hit-on-test
   hs-source-dirs:      test
   main-is:             Main.hs
 
-  build-depends:       base
-                     , text
+  build-depends:       text
                      , hspec
                      , github
                      , hit-on
