--- a/stack.yaml
+++ b/stack.yaml
@@ -2,6 +2,7 @@ resolver: lts-14.7
 
 extra-deps:
   - github-0.23
+  - optparse-applicative-0.15.1.0
   - relude-0.6.0.0
-  - shellmet-0.0.1
+  - shellmet-0.0.3.0
   - binary-instances-1@sha256:b17565598b8df3241f9b46fa8e3a3368ecc8e3f2eb175d7c28f319042a6f5c79,2613
