--- a/hit-on.cabal
+++ b/hit-on.cabal
@@ -65,6 +65,7 @@ library
                            Hit.Git.Fresh
                            Hit.Git.Hop
                            Hit.Git.Log
+                           Hit.Git.Stash
                            Hit.Git.Status
                            Hit.Git.Uncommit
                          Hit.Issue
