--- a/hit-on.cabal
+++ b/hit-on.cabal
@@ -67,6 +67,7 @@ library
                            Hit.Git.Log
                            Hit.Git.Stash
                            Hit.Git.Status
+                           Hit.Git.Sync
                            Hit.Git.Uncommit
                            Hit.Git.Unstash
                          Hit.Issue
