--- a/hit-on.cabal
+++ b/hit-on.cabal
@@ -62,6 +62,7 @@ library
                          Hit.Formatting
                          Hit.Git
                            Hit.Git.Common
+                           Hit.Git.Current
                            Hit.Git.Diff
                            Hit.Git.Fresh
                            Hit.Git.Hop
