Extract `clone` and `clear` into own module

--- a/hit-on.cabal
+++ b/hit-on.cabal
@@ -62,6 +62,8 @@ library
                          Hit.Formatting
                          Hit.Git
                            Hit.Git.Amend
+                           Hit.Git.Clear
+                           Hit.Git.Clone
                            Hit.Git.Common
                            Hit.Git.Current
                            Hit.Git.Diff
