[#129] Split Git into smaller modules (#132)
* Extract `nameOrMaster` into common

* Extract `uncommit` into own module

* Extract `hop` into own module

* Extract `fresh` into own module

* Extract `log` into own module

* Extract all internal helpers into `Common` module

* Extract `stash` into own module

* Extract `unstash` into own module

* Extract `sync` into own module

* Extract `push` into own module

* Extract `diff` into own module

* Extract `runStatus` into the Status module

* Extract `current` into own module

* Extract `fix` into own module

* Extract `amend` into own module

* Extract `resolve` into own module

* Extract `clone` and `clear` into own module

* Extract `commit` into own module

* Extract `new` into own module

* Prettify imports

* Recover behaviour with shellmet

* Remove trailing whitespaces

* Update src/Hit/Git/Clone.hs

Co-Authored-By: Veronika Romashkina <vrom911@gmail.com>

* Apply suggestions from code review

Co-Authored-By: Veronika Romashkina <vrom911@gmail.com>

* Put qualified imports after all other imports

remove question comment,
add two empty lines before code starts

Co-authored-by: Veronika Romashkina <vrom911@gmail.com>

--- a/hit-on.cabal
+++ b/hit-on.cabal
@@ -61,7 +61,25 @@ library
                          Hit.Core
                          Hit.Formatting
                          Hit.Git
+                           Hit.Git.Amend
+                           Hit.Git.Clear
+                           Hit.Git.Clone
+                           Hit.Git.Commit
+                           Hit.Git.Common
+                           Hit.Git.Current
+                           Hit.Git.Diff
+                           Hit.Git.Fix
+                           Hit.Git.Fresh
+                           Hit.Git.Hop
+                           Hit.Git.Log
+                           Hit.Git.New
+                           Hit.Git.Push
+                           Hit.Git.Resolve
+                           Hit.Git.Stash
                            Hit.Git.Status
+                           Hit.Git.Sync
+                           Hit.Git.Uncommit
+                           Hit.Git.Unstash
                          Hit.Issue
 
   autogen-modules:     Paths_hit_on
