--- a/stack.yaml
+++ b/stack.yaml
@@ -1,8 +1,5 @@
-resolver: lts-14.7
+resolver: nightly-2019-12-27
 
 extra-deps:
   - github-0.23
-  - optparse-applicative-0.15.1.0
-  - relude-0.6.0.0
-  - shellmet-0.0.3.0
-  - binary-instances-1@sha256:b17565598b8df3241f9b46fa8e3a3368ecc8e3f2eb175d7c28f319042a6f5c79,2613
+  - binary-instances-1
