--- a/hit-on.cabal
+++ b/hit-on.cabal
@@ -14,14 +14,14 @@ category:            Git, CLI Tool
 build-type:          Simple
 extra-doc-files:     README.md
                      CHANGELOG.md
-tested-with:         GHC == 8.6.5
+tested-with:         GHC == 8.8.1
 
 source-repository head
   type:                git
   location:            https://github.com/kowainik/hit-on.git
 
 common common-options
-  build-depends:       base ^>= 4.12.0.0
+  build-depends:       base ^>= 4.13.0.0
                      , relude ^>= 0.6.0.0
 
   mixins:              base hiding (Prelude)
@@ -36,10 +36,14 @@ common common-options
                        -fhide-source-paths
                        -Wmissing-export-lists
                        -Wpartial-fields
+  if impl(ghc >= 8.8.1)
+    ghc-options:       -Wmissing-deriving-strategies
+                       -Werror=missing-deriving-strategies
 
   default-language:    Haskell2010
   default-extensions:  ConstraintKinds
                        DeriveGeneric
+                       DerivingStrategies
                        GeneralizedNewtypeDeriving
                        InstanceSigs
                        KindSignatures
