--- a/hit-on.cabal
+++ b/hit-on.cabal
@@ -21,7 +21,7 @@ source-repository head
   location:            https://github.com/kowainik/hit-on.git
 
 common common-options
-  build-depends:       base ^>= 4.13.0.0
+  build-depends:       base >= 4.12.0.0 && < 4.14
                      , relude ^>= 0.6.0.0
 
   mixins:              base hiding (Prelude)
