--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -10,34 +10,39 @@ on:
 
 jobs:
   build:
-    name: ghc ${{ matrix.ghc }}
-    runs-on: ubuntu-16.04
+    name: ${{ matrix.os }} / ghc ${{ matrix.ghc }}
+    runs-on: ubuntu-latest
     strategy:
       matrix:
-        ghc: ["8.8.2"]
+        ghc: ["8.8.3"]
         cabal: ["3.0"]
 
     steps:
     - uses: actions/checkout@v2
       if: github.event.action == 'opened' || github.event.action == 'synchronize' || github.event.ref == 'refs/heads/master'
 
-    - uses: actions/setup-haskell@v1
+    - uses: actions/setup-haskell@v1.1.1
+      id: setup-haskell-cabal
       name: Setup Haskell
       with:
         ghc-version: ${{ matrix.ghc }}
         cabal-version: ${{ matrix.cabal }}
 
+    - name: Freeze
+      run: |
+        cabal freeze
+
     - uses: actions/cache@v1
       name: Cache ~/.cabal/store
       with:
-        path: ~/.cabal/store
-        key: ${{ runner.os }}-${{ matrix.ghc }}-cabal
+        path: ${{ steps.setup-haskell-cabal.outputs.cabal-store }}
+        key: ${{ runner.os }}-${{ matrix.ghc }}-${{ hashFiles('cabal.project.freeze') }}
 
     - name: Build
       run: |
-        cabal update
+        cabal configure --enable-tests --enable-benchmarks --test-show-details=direct
         cabal build --enable-tests --enable-benchmarks
 
     - name: Test
       run: |
-        cabal test --enable-tests
+        cabal test
