Turn off testing on Mac due to GitHub limit issue

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -44,8 +44,8 @@ jobs:
         cabal build --enable-tests --enable-benchmarks
 
     - name: Test
-      run: |
-        cabal test
+      if: matrix.os != 'macOS-latest'
+      run: cabal test
 
   hlint:
     name: hlint
