--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -96,7 +96,7 @@ jobs:
       - name: Get Release File Name & Upload URL
         id: get_release_info
         run: |
-          echo "::set-output name=upload_url::$(cat release_url/release_url.txt)"
+          echo "::set-output name=upload_url::$(cat release_url.txt)"
 
       - name: Upload Release Asset
         id: upload-release-asset
