--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -43,6 +43,10 @@ jobs:
         cabal configure --enable-tests --enable-benchmarks --test-show-details=direct
         cabal build --enable-tests --enable-benchmarks
 
+    - name: origin/HEAD
+      if: matrix.os == 'ubuntu-latest'
+      run: git remote set-head origin -a
+
     - name: Test
       if: matrix.os != 'macOS-latest'
       run: cabal test
