--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -44,7 +44,7 @@ jobs:
         cabal build --enable-tests --enable-benchmarks
 
     - name: origin/HEAD
-      if: matrix.os == 'ubuntu-latest'
+      if: matrix.os != 'macOS-latest'
       run: git remote set-head origin -a
 
     - name: Test
