--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -19,10 +19,9 @@ jobs:
         ghc: ["8.8.4"]
 
     steps:
-    - uses: actions/checkout@v2.3.4
+    - uses: actions/checkout@v2
       with:
         ref: ${{ github.event.pull_request.head.sha }}
-      if: github.event.action == 'opened' || github.event.action == 'synchronize' || github.event.ref == 'refs/heads/main'
 
     - name: Setup Haskell
       uses: actions/setup-haskell@v1.1.3
@@ -47,7 +46,9 @@ jobs:
 
     - name: origin/HEAD
       if: matrix.os != 'macOS-latest'
-      run: git remote set-head origin -a
+      run: |
+          git gc --auto
+          git remote set-head origin -a
 
     - name: Test
       if: matrix.os != 'macOS-latest'
