--- a/hit-on.cabal
+++ b/hit-on.cabal
@@ -9,36 +9,42 @@ license:             MPL-2.0
 license-file:        LICENSE
 author:              Veronika Romashkina, Dmitrii Kovanikov
 maintainer:          Kowainik <xrom.xkov@gmail.com>
-copyright:           2019-2020 Kowainik
+copyright:           2019-2021 Kowainik
 category:            Git, CLI Tool
 build-type:          Simple
 extra-doc-files:     README.md
                      CHANGELOG.md
 tested-with:         GHC == 8.8.4
+                     GHC == 8.10.4
 
 source-repository head
   type:                git
   location:            https://github.com/kowainik/hit-on.git
 
 common common-options
-  build-depends:       base ^>= 4.13.0.0
+  build-depends:       base >= 4.13.0.0 && < 4.15
                      , relude ^>= 0.7.0.0
 
   mixins:              base hiding (Prelude)
                      , relude (Relude as Prelude)
 
   ghc-options:         -Wall
-                       -Wincomplete-uni-patterns
-                       -Wincomplete-record-updates
                        -Wcompat
                        -Widentities
+                       -Wincomplete-uni-patterns
+                       -Wincomplete-record-updates
                        -Wredundant-constraints
+                       -Wnoncanonical-monad-instances
                        -fhide-source-paths
                        -Wmissing-export-lists
                        -Wpartial-fields
-  if impl(ghc >= 8.8.1)
+  if impl(ghc >= 8.8)
     ghc-options:       -Wmissing-deriving-strategies
                        -Werror=missing-deriving-strategies
+                       -fwrite-ide-info
+                       -hiedir=.hie
+  if impl(ghc >= 8.10)
+    ghc-options:       -Wunused-packages
 
   default-language:    Haskell2010
   default-extensions:  ConstraintKinds
@@ -52,6 +58,7 @@ common common-options
                        RecordWildCards
                        ScopedTypeVariables
                        StandaloneDeriving
+                       StrictData
                        TupleSections
                        TypeApplications
                        ViewPatterns
@@ -62,6 +69,7 @@ library
   exposed-modules:     Hit
                          Hit.Cli
                          Hit.Core
+                         Hit.Error
                          Hit.Formatting
                          Hit.Git
                            Hit.Git.Amend
@@ -75,6 +83,7 @@ library
                            Hit.Git.Fix
                            Hit.Git.Fresh
                            Hit.Git.Hop
+                           Hit.Git.Issue
                            Hit.Git.Log
                            Hit.Git.Milestones
                            Hit.Git.Pr
@@ -87,23 +96,27 @@ library
                            Hit.Git.Uncommit
                            Hit.Git.Wip
                          Hit.GitHub
+                           Hit.GitHub.Auth
+                           Hit.GitHub.Issue
+                           Hit.GitHub.Milestone
+                           Hit.GitHub.Repository
                          Hit.Hub
                          Hit.Prompt
-                         Hit.Issue
 
   autogen-modules:     Paths_hit_on
   other-modules:       Paths_hit_on
 
-  build-depends:       ansi-terminal >= 0.8
+  build-depends:       aeson ^>= 1.5
+                     , ansi-terminal >= 0.8
                      , colourista ^>= 0.1
                      , directory ^>= 1.3
-                     , github ^>= 0.23
+                     , github-graphql ^>= 0.0
                      , gitrev ^>= 1.3
                      , optparse-applicative ^>= 0.15
                      , process ^>= 1.6
+                     , prolens ^>= 0.0
                      , shellmet ^>= 0.0.3.0
                      , text
-                     , vector ^>= 0.12
 
 executable hit
   import:              common-options
