--- a/hit-on.cabal
+++ b/hit-on.cabal
@@ -26,7 +26,9 @@ common common-options
                      , relude ^>= 0.7.0.0
 
   mixins:              base hiding (Prelude)
-                     , relude (Relude as Prelude)
+                     , relude (Relude as Prelude
+                              , Relude.Extra.Enum
+                              )
 
   ghc-options:         -Wall
                        -Wcompat
@@ -99,7 +101,8 @@ library
                            Hit.GitHub.Auth
                            Hit.GitHub.Issue
                            Hit.GitHub.Milestone
-                           Hit.GitHub.Repository
+                           Hit.GitHub.PullRequest
+                           Hit.GitHub.User
                          Hit.Hub
                          Hit.Prompt
 
@@ -107,7 +110,6 @@ library
   other-modules:       Paths_hit_on
 
   build-depends:       aeson ^>= 1.5
-                     , ansi-terminal >= 0.8
                      , colourista ^>= 0.1
                      , directory ^>= 1.3
                      , github-graphql ^>= 0.0
@@ -137,7 +139,6 @@ test-suite hit-on-test
 
   build-depends:       text
                      , hspec ^>= 2.7.1
-                     , github
                      , hit-on
 
   ghc-options:        -threaded
