Update CI config

--- a/hit-on.cabal
+++ b/hit-on.cabal
@@ -14,15 +14,14 @@ category:            Git, CLI Tool
 build-type:          Simple
 extra-doc-files:     README.md
                      CHANGELOG.md
-tested-with:         GHC == 8.8.4
-                     GHC == 8.10.4
+tested-with:         GHC == 8.10.4
 
 source-repository head
   type:                git
   location:            https://github.com/kowainik/hit-on.git
 
 common common-options
-  build-depends:       base >= 4.13.0.0 && < 4.15
+  build-depends:       base ^>= 4.14
                      , relude ^>= 0.7.0.0
 
   mixins:              base hiding (Prelude)
